Improve base lagoon and lando setup

--- a/assets/.lando.base.yml
+++ b/assets/.lando.base.yml
@@ -2,12 +2,19 @@ recipe: lagoon
 config:
   flavor: drupal
 env_file:
+  - .env
   - .lagoon.env
 
 services:
   appserver:
     webroot: web
     type: php:8.2
+    build_as_root:
+      - mkdir -p /root/tmp
+      - chmod 666 /root/tmp
+      - mkdir -p /app/web/sites/simpletest/browser-output
+      - chmod 777 -R /app/web/sites/simpletest
+      - /usr/local/bin/composer self-update
     overrides:
       environment:
         PHP_IDE_CONFIG: serverName=localhost
